# Personal-CRM

./: .gitignore  README.md  pyproject.toml
backend/personal_crm/: __init__.py  db.py  google_contacts.py  recommender.py
backend/src/personal_crm/: cli.py
examples/: contacts_template.csv  google_contacts_template.csv  messages_template.csv
interface/src/personal_crm_interface/: webapp.py
interface/src/personal_crm_interface/static/: styles.css
interface/src/personal_crm_interface/templates/: index.html
scripts/: run_cli_dev.sh  run_daily.sh  run_ui.sh  run_ui_dev.sh
src/personal_crm/: agent.py  importers.py  llm.py  notifications.py
